# master-thesis

./: MasterThesis.code-workspace
.github/workflows/: cd.yaml
code/: .gitignore  LICENSE  Makefile  README.md  Roadmap  config.yaml  pyproject.toml
code/crd/: iluzio.yaml  schema.yml
code/images/: build.sh
code/images/idle/: Dockerfile
code/images/sidecar/: Dockerfile  go.mod  main.go
code/scenarios/one-sat-two-base/: run.sh  scenario.yaml
code/scenarios/one-sat-two-base/base/: Dockerfile  index.js  package.json  pnpm-lock.yaml
code/scenarios/one-sat-two-base/sat/: Dockerfile  index.js  package.json  pnpm-lock.yaml
code/src/: k8s.py  main.py  templates.py  utils.py
code/src/kinds/: link.py  node.py  scenario.py
code/src/templates/chaos/: link.yaml
code/src/templates/demo/: chaos-link.yaml  link.yaml  node.yaml  test.yaml  workflow.yaml
code/src/templates/iluzio/: link.yaml  node.yaml
code/src/templates/native/: node.yaml
thesis/: .gitattributes  .gitignore  Makefile  README.md
thesis/fonts/: install.sh
thesis/src/: db.bib  main.tex
thesis/src/chapters/: concept.tex  documentation.tex  evaluation.tex  fundamentals.tex  implementation.tex  introduction.tex  related-work.tex  requirements.tex  summary.tex
thesis/src/lib/: acronyms.sty  metadata.sty  requirements.sty
